# Rover

./: .gitignore  frames_2024-07-18_13.40.10.gv  frames_2024-07-18_13.51.06.gv  frames_2024-07-18_14.20.35.gv  xorg.conf
ai_reconstruction_ws/install/: local_setup.sh  setup.sh
ai_reconstruction_ws/install/ai_reconstruction/lib/ai_reconstruction/: realsense
ai_reconstruction_ws/install/ai_reconstruction/share/ai_reconstruction/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ai_reconstruction_ws/install/robot_position_listener/lib/robot_position_listener/: position_listener
ai_reconstruction_ws/install/robot_position_listener/share/robot_position_listener/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ai_reconstruction_ws/log/: latest_build
ai_reconstruction_ws/our_dataset/: calibration.yaml  depth.txt  groundtruth.txt  rgb.txt
ai_reconstruction_ws/src/ai_reconstruction/: setup.cfg  setup.py
ai_reconstruction_ws/src/ai_reconstruction/ai_reconstruction/: realsense.py
ai_reconstruction_ws/src/robot_position_listener/: package.xml  setup.cfg  setup.py
kiss-icp_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
kiss-icp_ws/install/kiss_icp/lib/kiss_icp/: kiss_icp_node
kiss-icp_ws/install/kiss_icp/share/kiss_icp/: local_setup.sh  package.sh
kiss-icp_ws/log/: latest_build
kiss-icp_ws/src/kiss-icp/ros/launch/: odometry.launch.py
kiss-icp_ws/src/kiss-icp/ros/src/: OdometryServer.cpp
log/: latest_build
navigation/: frames_2024-07-03_11.40.10.gv  frames_2024-07-03_14.32.10.gv
navigation/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
navigation/install/costmap_converter/share/costmap_converter/: local_setup.sh  package.sh
navigation/install/costmap_converter_msgs/share/costmap_converter_msgs/: package.sh
navigation/install/dstar_main/lib/dstar_main/: dstar_main  dwa_main  map2grid  scan2grid
navigation/install/dstar_main/share/dstar_main/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
navigation/install/dwa_main/share/dwa_main/: local_setup.sh  package.dsv  package.ps1  package.sh  package.zsh
navigation/log/: latest_build
navigation/src/dstar_main/: CMakeLists.txt  setup.cfg  setup.py
navigation/src/dstar_main/config/: dstar_main.yaml  dwa_main.yaml  map2grid.yaml
navigation/src/dstar_main/include/dstar_main/: dstar_lct.hpp  dstar_main.h
navigation/src/dstar_main/include/dwa_main/: dwa_main.h
navigation/src/dstar_main/include/map2grid/: map2grid.h
navigation/src/dstar_main/include/scan2grid/: scan2grid.h
navigation/src/dstar_main/launch/: dstar_main.launch.py  dwa_main.launch copy.py  scan2grid.launch.py
navigation/src/dstar_main/src/: dstar_main.cpp  dwa_main.cpp  map2grid.cpp  scan2grid.cpp
navigation/src/dwa_main/: CMakeLists.txt
navigation/src/dwa_main/config/: dwa_local_planner_params.yaml
navigation/src/dwa_main/src/: dwa_local_planner.cpp
navigation/src/install/: local_setup.sh  setup.sh
navigation/src/log/: latest_build
pcfilter_ws/src/pcl_filter/: CMakeLists.txt
pcl_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
pcl_ws/install/kalman_filter_pkg/lib/kalman_filter_pkg/: kalman_filter_node
pcl_ws/install/kalman_filter_pkg/share/kalman_filter_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
pcl_ws/install/livox_tf/lib/livox_tf/: livox_tf_node
pcl_ws/install/livox_tf/share/livox_tf/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
pcl_ws/install/my_package/share/my_package/: package.sh  package.xml
pcl_ws/install/pcl_filter/lib/pcl_filter/: point_cloud_filter_node
pcl_ws/install/pcl_filter/share/pcl_filter/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
pcl_ws/install/pcl_object_detection/lib/pcl_object_detection/: pcl_object_detection_node
pcl_ws/log/: latest_build
pcl_ws/maps/: test_map.pgm  test_map.yaml
pcl_ws/src/install/: local_setup.sh  setup.ps1  setup.sh
pcl_ws/src/kalman_filter_pkg/: CMakeLists.txt  package.xml
pcl_ws/src/kalman_filter_pkg/src/: kalman_filter_node.cpp
pcl_ws/src/livox_tf/: setup.cfg  setup.py
pcl_ws/src/log/: latest_build
pcl_ws/src/my_package/: setup.py
pcl_ws/src/pcl_filter/: CMakeLists.txt  package.xml
pcl_ws/src/pcl_filter/include/pcl_filter/: PointCloudFilter.hpp
pcl_ws/src/pcl_filter/src/: PointCloudFilter.cpp
pcl_ws/src/pointcloud_to_laserscan/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
pcl_ws/src/pointcloud_to_laserscan/launch/: 2d_pointcloud_to_laserscan_launch.py  sample_laserscan_to_pointcloud_launch.py  sample_pointcloud_to_laserscan_launch.py
pcl_ws/src/pointcloud_to_laserscan/log/: latest_build
pcl_ws/src/pointcloud_to_laserscan/src/: laserscan_to_pointcloud_node.cpp  pointcloud_to_laserscan_node.cpp
pcl_ws/src/projected_pcl/: CMakeLists.txt
pcl_ws/src/projected_pcl/src/: projected_pcl_node.cpp
pcl_ws/src/ros2_pcl_object_detection/src/: pcl_object_detection.cpp  pcl_object_detection.hpp
recorded/: metadata.yaml
scout/: frames_2024-07-15_16.16.16.gv  frames_2024-07-15_16.22.42.gv
scout/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
scout/install/scout_base/share/scout_base/: package.sh  (+1 more)
scout/src/scout_ros2/scout_base/: CMakeLists.txt
slamconversion_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
slamconversion_ws/log/: latest_build
slamconversion_ws/src/map_array_visualizer/: CMakeLists.txt  package.xml
slamconversion_ws/src/map_array_visualizer/src/: map_array_visualizer.cpp
test/: log.txt
texttopoint_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
texttopoint_ws/log/: latest_build
texttopoint_ws/src/point_publisher_pkg/: CMakeLists.txt
texttopoint_ws/src/point_publisher_pkg/src/: point_publisher.cpp
yolo_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
yolo_ws/log/: latest_build
(+124 files in other folders)
