<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kalman_filter_pkg</name>
  <version>0.0.1</version>
  <description>A simple ROS 2 package for demonstrating Kalman Filter with PCL and OpenCV.</description>
  <maintainer email="intern.innowing@gmail.com">iwintern</maintainer>
  <license>Apache-2.0</license> <!-- Update this with your chosen license -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <!-- Eigen and OpenCV are not ROS 2 packages and should be installed separately -->
  <!-- However, if there are ROS 2 wrappers available, you can list them here -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>